syntax = "proto3";

package proto;

option go_package = "./proto";

service Eventer {
  rpc CreateEvent (Event) returns (EventResponse) {}
  rpc UpdateEvent (Event) returns (EventResponse) {}
  rpc DeleteEvent (Event) returns (EventResponse) {}
  rpc GetEventByID (Event) returns (Event) {}
  rpc GetEvents (EventsRequest) returns (EventsResponse) {}
}

message Event {
  string id = 1;
  string title = 2;
  string start_at = 3;
  string end_at = 4;
}

message EventsRequest {}
message EventResponse {}

message EventsResponse {
  repeated Event events = 1;
}